[package]
name = "user-oriochat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
futures = "0.3"
sqlx = { version = "0.7", features = ["mysql", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
bcrypt = "0.12"
jsonwebtoken = "8.1"
tonic = "0.12.3"
prost = "0.13.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "user-oriochat-app"
path = "src/main.rs"